--- a/android/app/src/development/res/values/strings.xml
+++ b/android/app/src/development/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Dev App</string>
+    <string name="app_name">ironmanReactNativeCliDEV</string>
 </resources>
