--- a/android/app/src/staging/res/values/strings.xml
+++ b/android/app/src/staging/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Staging App</string>
+    <string name="app_name">ironmanReactNativeCliStaging</string>
 </resources>
